--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
 <body>
     <div class="container">
-        <img class="advert-image" src="/logo.svg" width="30" height="30" alt="Advertisement Image">
+        <img class="advert-image" src="logo.svg" width="30" height="30" alt="Advertisement Image">
         <h1 class="advert-heading">Supercharge Your Business Now</h1>
         <p class="advert-text">Unlock the potential of your business with our top-notch software services. We specialize in custom software development, web applications, mobile apps, and more.</p>
         <p class="advert-text">Our team of skilled developers is dedicated to delivering innovative solutions tailored to your needs.</p>
