--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <link rel="stylesheet" href="style.css">
 <body>
     <div class="container">
+        <div style="display: flex;align-items: center;gap: 20px;">
         <img class="advert-image" src="logo.svg" width="30" height="30" alt="Advertisement Image">
         <h1 class="advert-heading">Supercharge Your Business Now</h1>
+        </div>
         <p class="advert-text">Unlock the potential of your business with our top-notch software services. We specialize in custom software development, web applications, mobile apps, and more.</p>
-        <p class="advert-text">Our team of skilled developers is dedicated to delivering innovative solutions tailored to your needs.</p>
         <div class="call-to-action">
-            <a href="your_cta_link_here" class="cta-button" target="_top">Learn More</a>
+            <a href="https://redodevelopers.site" class="cta-button" target="_top">Learn More</a>
         </div>
     </div>
 </body>
