--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="style.css">
 <body>
+    <a href="https://redodevelopers.site" target="_blank">
     <div class="container">
         <div style="display: flex;align-items: center;gap: 20px;">
         <img class="advert-image" src="logo.svg" width="30" height="30" alt="Advertisement Image">
@@ -9,8 +10,9 @@
         </div>
         <p class="advert-text">Unlock the potential of your business with our top-notch software services. We specialize in custom software development, web applications, mobile apps, and more.</p>
         <div class="call-to-action">
-            <a href="https://redodevelopers.site" class="cta-button" target="_top">Learn More</a>
+            <a href="https://redodevelopers.site" class="cta-button" target="_blank">Learn More</a>
         </div>
     </div>
+    </a>
 </body>
 </html>
