--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 <body>
     <a href="https://redodevelopers.site" target="_blank">
     <div class="container">
-        <div style="display: flex;align-items: center;gap: 20px;">
+        <div style="display: flex;align-items: center;gap: 10px;">
         <img class="advert-image" src="logo.svg" width="30" height="30" alt="Advertisement Image">
         <h1 class="advert-heading">Supercharge Your Business Now</h1>
         </div>
